--- a/static/index.html
+++ b/static/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>BCC</title>
 </head>
 
 <body>
-    <h1 class="title">Yesy123</h1>
+    <h1 class="title">BathcoatCrew</h1>
 
     <script src="main.js"></script>
 </body>
